--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^22.8.2",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.6.3",
     "vite": "^4.3.9"
   },
   "keywords": [],
